--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -5,6 +5,9 @@
     "hardhat": "^2.19.5"
   },
   "dependencies": {
-    "ethers": "^6.10.0"
+    "@openzeppelin/contracts": "^5.0.1",
+    "dotenv": "^16.4.1",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^6.11.0"
   }
 }
